# mitgcm_utils

./: .buildinfo  .gitignore  README.md  beditor.html  environment.yml  genindex.html  index.html  installation.html  mkMITgcmBC.html  mkMITgcmEXF.html  objects.inv  pyproject.toml  requirements-doc.txt  search.html  searchindex.js  tox.ini
.doctrees/: beditor.doctree  environment.pickle  index.doctree  installation.doctree  mkMITgcmBC.doctree  mkMITgcmEXF.doctree
.github/workflows/: build-docs.yml
_sources/: beditor.rst.txt  installation.md
docs/: index.rst
docs/source/: conf.py  index.md  mkMITgcmBC.md  mkMITgcmBC.rst  mkMITgcmEXF.md  mkMITgcmEXF.rst  usage.md
mitgcm_utils/: beditor.py  beditor_old.py  mkMITgcmBC.py  mkMITgcmEXF.py  utils.py
mitgcm_utils/beditor/: bathymetry_model.py  command_manager.py  heatmap_canvas.py  lake_selection_command.py  logger.py  main.py  nearest_neighbor_average_command.py  selection_command.py  transform_commands.py
reg_tests/: plot_bc.py  plot_exf_from_wrf.py
