[build-system]
requires = ["setuptools >= 61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mitgcm_utils"
authors = [{ name = "Prajeesh Ag", email = "prajeeshag@gmail.com" }]
dynamic = ["version"]
description = "Command line tools for MITgcm"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "xarray",
    "netcdf4",
    "f90nml",
    "cdo",
    "typer",
    "scipy",
    "matplotlib",
    "pandas",
    "mpl_interactions",
    "pyqt5",
]

[tool.setuptools.packages.find]
exclude = ["test_data", "docs"]

[project.scripts]
mkMITgcmEXF = "mitgcm_utils.mkMITgcmEXF:app"
mkMITgcmBC = "mitgcm_utils.mkMITgcmBC:app"
beditor = "mitgcm_utils.beditor:main"
